--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/googlemaps": "^3.30.8",
+    "angular-moment": "^1.2.0",
     "core-js": "^2.4.1",
+    "moment": "^2.22.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
